# RustEpubReader-Model

./: .gitattributes  .gitignore  README.md  requirements.txt
.github/workflows/: build-model.yml  build-plugin.yml  release.yml  train.yml  validate-pr.yml
config/: training_config.yaml
datasets/: README.md
datasets/base/: .gitkeep
datasets/submissions/: .gitkeep
plugins/: Cargo.toml  README.md  build_output.json
plugins/csc-plugin/: Cargo.toml
plugins/csc-plugin/include/: csc_plugin.h
plugins/csc-plugin/src/: inference.rs  lib.rs  tokenizer.rs
scripts/: export_onnx.py  extract_onnxruntime_android.py  generate_manifest.py  generate_plugin_manifest.py  pai_submit.py  quantize.py  train.py  validate_submissions.py
