[package]
name = "csc-plugin"
version = "1.0.0"
edition = "2021"
description = "Chinese Spelling Correction inference plugin for RustEpubReader (ABI v1)"
license = "Apache-2.0"
publish = false

[lib]
name = "csc_plugin"
crate-type = ["cdylib"]

[dependencies]
# `load-dynamic`: ORT shared lib is loaded at runtime via ORT_DYLIB_PATH set
# by the host application. This keeps the plugin under ~1 MB instead of
# bundling the entire onnxruntime (≈25 MB).
#
# Pinned to rc.9 — newer rc.12 has an internal compile error in `ep/vitis.rs`
# against the matching ort-sys snapshot. rc.9 is the last known good cut.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray"] }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# Enable DirectML EP (Windows only). When set, the plugin will additionally try
# the DirectML provider before falling back to CPU.
directml = ["ort/directml"]
# Enable CUDA EP (Linux x86_64 / Windows x86_64 with CUDA toolkit).
cuda = ["ort/cuda"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
